@@ -3,12 +3,12 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- \n in replace string
 - option for b&w print
 - document deep indent
 - tall caret and tab
 - tall caret and backspace
 - change of AT_WORD_START semantics to fix perl highlighting?
-- kill ring obviously broken
 - some search dialog problems
 - new file: horiz scroll wrong
 - while loading --> scroll bar
